# yield-flow-engine

./: .env.example  .gitignore  FURUFLOW_RELEASE_NOTES.md  LAUNCH_CHECKLIST.md  README.md  YieldFlow_Tracker.xlsx  app.py  app_linkdebug.py  auth.py  db.py  entitlements.py  furuflow.db  generate_daily_recap.py  generate_weekly_recap.py  history_store.py  parse-engine.fixed.ps1  parse-engine.regex.ps1  post_real_signals.py  post_to_x.py  posted_signals_degen.json  posted_signals_moderate.json  pyproject.toml  requirements.txt  revised_prompt.md  run_furuflow.ps1  run_furuflow_degen_signals.ps1  run_furuflow_moderate_signals.ps1  run_furuflow_signal_buckets.ps1  run_furuflow_signal_post.ps1  run_furuflow_x_posts.ps1  scan-watch-adaptive.backup.ps1  scan-watch-adaptive.patched.ps1  signal_card.py  signal_formatter.py  signal_intelligence.py  stripe_stub.py  stripe_webhook_example.py  telegram_bot.py  telegram_utils.py  yf_ingest.py
bots/: auto_allocator.py
engine/: alerts.py  cli.py  core.py  history.py  links.py  performance.py  postprocess.py  recap.py  scanner.py  scoring.py  tier.py  x_format.py
runs/: 2025-10-11-2301-dex.csv  2025-10-11-2355-dex.csv  2025-10-12-1630-discord.txt  2025-10-12-1630-report.md  2025-10-14-0126-discord.txt  2025-10-14-0126-report.md  2025-10-14-0131-report.md  2025-10-14-0138-discord.txt  2025-10-14-0138-report.md  2025-10-14-0139-discord.txt  2025-10-14-0139-report.md  2025-10-15-1747-report.md  2025-10-15-1749-discord.txt  2025-10-15-1749-report.md  2025-10-15-1751-report.md  2025-10-15-1753-report.md  2025-10-19-2023-scan.raw.txt  (+722 more)
(+9 files in other folders)
