[tool.poetry]
name = "yield-flow-engine"
version = "0.1.0"
description = "Phase 1 yield scanner CLI"
readme = "README.md"
packages = [{ include = "engine" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"            # avoid 3.13 for now
rich = "^13.7.0"
httpx = "^0.27.0"
pydantic = "^2.8.0"
requests = "^2.32.5"
typer = ">=0.9"                    # brings a compatible click
web3 = "^6.20.0"
python-dotenv = "^1.0.1"
tzdata = "^2025.2"
openpyxl = "^3.1.5"
pandas = "^2.3.0"
streamlit = ">=1.55.0,<2.0.0"
altair = ">=5.0.0,<6.0.0"

[tool.poetry.scripts]
engine = "engine.cli:cli"

